--- a/js/shangguigu/数据_变量_内存.html
+++ b/js/shangguigu/数据_变量_内存.html
@@ -6,11 +6,57 @@
 </head>
 <body>
     1.数据，存储在内存中。基本数据和对象数据。
+    <hr/>
     2.内存，内存条通电后产生的可存储数据的空间（临时的）
     内存条（电路板）==>通电==>产生内存空间==>存储数据==>处理数据==>断电==>内存空间和数据消失
+    <hr/>
     3.变量，变量名用来找到变量值的内存。全局变量和局部变量在栈空间；对象在堆空间。只有地址变量才能加点。
+    <hr/>
 
+    4.这个a内存中到底保存了什么？ var a = xxx;
+    若xxx是基本数据，保存这个数据；
+    若xxx是对象，保存对象的地址；
+    若xxx是一个变量，保存它的内存内容（可能是基本数据，也可能是地址值）
+    <hr/>
+    5.多个引用变量指向同一个对象，通过一个变量修改对象内部数据，其他变量看到的是修改后的值。
+    6.局部变量在函数执行完自动释放，对象在成为垃圾对象后由垃圾回收器回收。
+    7.变量在等号左边，是唯一的"写"操作。
     <script type="text/javascript">
+    var obj1={name:'Tom'}
+    var obj2=obj1
+    function fn(obj){
+        obj.name ="A"
+    }
+    fn(obj1)
+    console.log(obj2.name)  //A
+
+    var a = {age:12}
+    var b = a
+    a = {name:'Bob',age:13} //a指向另一个对象了
+    console.log(b.name,b.age,a.name,a.age)  //undefined 12 "Bob" 13
+
+    function fn2(obj){
+        obj = {age:15}  
+    }
+ /*形参obj被隐式的赋值obj=a；obj指向33行a指向的对象，然后断掉obj该指向，obj指向新对象{age:15},最后函数结束时释放，从头到尾a指向没变化。*/
+    fn2(a)
+    console.log(a.age)  //13
+
+        var z = 3
+        function fn3(z) {
+            z = z + 1
+        }
+        fn3(z)
+        console.log(z)  //3
+
+        var x = 1
+        var y = 1
+        x === y //true
+        x == y  //true
+        x = { a: 1 }
+        y = { a: 1 }
+        x == y    //false
+        x === y   //false
 
     </script>
 </body>
