--- a/js/shangguigu/对象创建模式.html
+++ b/js/shangguigu/对象创建模式.html
@@ -57,7 +57,7 @@
         selfPerson.prototype.setName = function(name){
             this.name = name
         }
-        var p2 = new selfPerson('km',18)
+        var p2 = new selfPerson('km',18)    //new出多个实例，但是方法只有一份。
         console.log(p1,p2)
     </script>
     
