--- a/js/shangguigu/线程之JS单线程.html
+++ b/js/shangguigu/线程之JS单线程.html
@@ -9,7 +9,7 @@
     1.如何证明js执行是单线程的？<br>
     （1）setTimeout的回调函数在主线程执行<br>
     （2）定时器回调函数只有在运行栈中的代码全部执行完后才有可能执行<hr>
-    2.为什么js用单线程模式？（不是只有一个线程）<br>
+    2.为什么js用单线程模式？<br>
     （1）与js的用途有关<br>
     （2）作为浏览器脚本语音，js的主要用途是与用户互动，以及操作DOM<br>
     （3）这些决定它是单线程，否则会带来复杂的同步问题。<hr>
