--- a/js/jQuery/daoru.html
+++ b/js/jQuery/daoru.html
@@ -33,7 +33,48 @@
     <div class="c">
         class=c
     </div>
+    C语系中的&&和||<br>
+<br>
+　　C语系的&&和||有一个特点，无论你把表达式写的天花乱坠，都会返回一个布尔值。<br>
+<br>
+1，&&<br>
+<br>
+　　两边条件都为true时，结果才为true；<br>
+<br>
+　　如果有一个为false，结果就为false；<br>
+<br>
+　　当第一个条件为false时，就不再判断后面的条件；<br>
+<br>
+　　注意：当数值参与逻辑与运算时，结果为true，那么会返回的会是第二个为真的值；如果结果为false，返回的会是第一个为假的值。<br>
+<br>
+2，||<br>
+<br>
+　　只要有一个条件为true时，结果就为true；<br>
+<br>
+　　当两个条件都为false时，结果才为false；<br>
+<br>
+　　当一个条件为true时，后面的条件不再判断；<br>
+<br>
+　　注意：当数值参与逻辑或运算时，结果为true，会返回第一个为真的值；如果结果为false，会返回第二个为假的值；<br>
+JS中的&&和||<br>
+<br>
+1，JS中的&&和||，当出现在条件判断语句中时，例如if，会遵守C语系规则。<br>
+<br>
+2，JS中的&&和||，当初现在赋值语句中时，例如变量赋值、return结果等，会遵循以下规则：<br>
+<br>
+　　表达式a && 表达式b :  计算表达式a（也可以是函数）的运算结果，<br>
+                      如果为 True, 执行表达式b（或函数），并返回b的结果；<br>
+                      如果为 False，返回a的结果；<br>
+<br>
+　　表达式a || 表达式b :   计算表达式a（也可以是函数）的运算结果，<br>
+                      如果为 Fasle, 执行表达式b（或函数），并返回b的结果；<br>
+                      如果为 True，返回a的结果；<br>
 
+                      <button>123</button>
+                      <button>33</button>
+                      <button>44</button>
+                      <button>211</button>
+                      <button>33</button>
     <script src="daoru.js"></script>
 </body>
 </html>
