--- a/jd/index.html
+++ b/jd/index.html
@@ -9,9 +9,9 @@
     <title>JD FP</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container"> <!--总容器，包含：nav、header-box和content-->
             <div class="nav">
-                <div class="nav-box">
+                <div class="nav-box"><!--紧跟nav-->
                     <ul>
                         <li><a href="#">免费注册</a></li>
                         <li><a href="#">我的订单</a></li>
