--- a/html/H5/css3/cssReview.html
+++ b/html/H5/css3/cssReview.html
@@ -40,6 +40,32 @@
     
     <p id="weilei">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto saepe accusamus minima quam quas officiis autem natus? Doloremque numquam quasi nam consectetur voluptatibus, velit dolorem cumque, animi culpa quam iusto.</p>
     <div style="width: 200px;height: 200px;background-color: blue;"></div>
+    <table>
+        <thead>
+            <tr>
+                <th>xuhao</th>
+                <th>FIRST</th>
+                <th>SECOND</th>
+            </tr>
+            
+        </thead>
+        <tbody>
+            <tr>
+                <script type="text/javascript">
+                    var count = 0;
+                    count++;
+                    document.write("<td>"+ count  +"</td>");
+                </script>
+                <!-- <script type="text/typescript">
+                    var count = 0;
+                    count++;
+                    document.write(<td>"+count+"</td>);
+                </script> -->
+                  <td>FF</td>
+                  <td>SS</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
 
