--- a/html/H5/position.html
+++ b/html/H5/position.html
@@ -37,6 +37,14 @@
             /* float:right; */
             display: block;
         }
+.abox{
+    width:200px;
+    height: 100px;
+    background-color: red;
+    white-space:nowrap;
+    overflow:hidden;
+    text-overflow:ellipsis;
+}
     </style>
 </head>
 <body>
@@ -44,14 +52,25 @@
     <div class="box2">2</div>
     <div class="box3">3</div> -->
 
-    <i class="line">1</i>
+    <!-- <i class="line">1</i>
     <i class="line">2</i>
     <i class="line">3</i>
     <i class="line">4</i>
     <i class="line">5</i>
     
+ -->
+    <!-- <div class="line"></div> -->
+    <div class="abox">
+        <div style="width:20px;height:20px;border:1px green solid;border-radius:50%;background: rgb(161, 160, 160);">1</div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
 
-    <div class="line"></div>
 
 </body>
 </html>
