fix:组织部项目优化,树表同高

--- a/js/shangguigu/原型链_函数原型.html
+++ b/js/shangguigu/原型链_函数原型.html
@@ -6,7 +6,7 @@
     <title>原型链</title>
 </head>
 <body>
-    1.每个函数都有个prototype属性，即显式原型（属性），它默认指向一个空Object实例对象（原型对象），
+    1.js本来没有类，只有函数。每个函数都有个prototype属性，即显式原型（属性），它默认指向一个空Object实例对象（原型对象），
     空对象没有我们的属性。
     <hr/>
     2.原型对象中有一个属性constructor，它指向函数本身。
